# memvid

./: .gitignore  README.md
cli/: Cargo.toml  README.md
cli/src/: main.rs
mcp/: MEMVID_INSTRUCTIONS.md  QUICKSTART.md  README-for-LLMs.md  README.md  install.ps1  install.sh  jest.config.js  package-lock.json  package.json
mcp/src/: index.test.ts  index.ts
scripts/: build-release.ps1  build-release.sh
