[package]
name = "memvid-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "Apache-2.0"
description = "CLI for memvid memory operations"
repository = "https://github.com/philiplaureano/memvid"

[[bin]]
name = "memvid"
path = "src/main.rs"

[dependencies]
memvid-core = { path = "..", features = ["lex"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
